--- a/views/student_views.xml
+++ b/views/student_views.xml
@@ -10,7 +10,7 @@
                         <button name="change_to_new" type="object" string="New"/>
                         <button name="change_to_studying" type="object" string="Studying"/>
                         <button name="change_to_off" type="object" string="Off"/>
-                        <field name="state" widget="statusbar" options="{'clickable': 1, 'fold_field': 'fold'}"/>/>
+                        <field name="state" widget="statusbar" options="{'clickable': 1, 'fold_field': 'fold'}"/>
                     </header>
                     <sheet>
                         <div class="oe_title">
@@ -26,7 +26,7 @@
                                 <field name="dob"/>
                                 <field name="age"/>
                                 <field name="parent_ids"/>
-<!--                                <field name="class_ids"/>-->
+
                                 <field name="state"/>
                                 <field name="active"/>
                             </group>
@@ -53,6 +53,7 @@
                 <tree string="Students" default_order="create_date desc">
                     <field name="name"/>
                     <field name="student_ids"/>
+                    <field name="state"/>
                     <field name="age"/>
                     <field name="dob"/>
                     <field name="gender"/>
