--- a/views/class_education.xml
+++ b/views/class_education.xml
@@ -10,28 +10,22 @@
                         <group>
                             <group>
                                 <field name="name"/>
-                                <field name="class_ids"/>
-                                <field name="start_date"/>
-                                <field name="end_date"/>
+                                <field name="reference"/>
                                 <field name="active"/>
-                            </group>
-                            <group>
-                                <field name="teacher_ids"/>
                             </group>
                         </group>
                         <group>
                             <field name="write_date" string="Thời gian cập nhật"/>
                             <field name="create_date" string="thời gian tạo"/>
                         </group>
-<notebook>
-                            <page name="student_ids" string="Thành viên lớp học">
-								<group>
-									<group>
-										<field name="student_ids" />
-									</group>
-								</group>
-							</page>
-						</notebook>
+                        <notebook>
+                            <page name="student_ids" string="Học sinh">
+                                <field name="student_ids"/>
+                            </page>
+                            <page name="teacher_ids" string="Giáo viên">
+                                <field name="teacher_ids"/>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
@@ -43,10 +37,8 @@
             <field name="arch" type="xml">
                 <tree string="Class" default_order="create_date desc">
                     <field name="name"/>
-                    <field name="class_ids"/>
+                    <field name="reference"/>
                     <field name="active"/>
-                    <field name="start_date"/>
-                    <field name="end_date"/>
                 </tree>
             </field>
         </record>
@@ -57,9 +49,7 @@
             <field name="arch" type="xml">
                 <search string="Student">
                     <field name="name"/>
-                    <field name="class_ids"/>
-                    <field name="start_date"/>
-                    <field name="end_date"/>
+                    <field name="reference"/>
                 </search>
             </field>
         </record>
@@ -69,11 +59,11 @@
             <field name="res_model">class.student</field>
 
         </record>
-    <menuitem id="menu_class"
-              name="Quản lý lớp học"
-              action="action_class"
-              parent="menu_management_class_master"
-              sequence="1"
-    />
+        <menuitem id="menu_class"
+                  name="Quản lý lớp học"
+                  action="action_class"
+                  parent="menu_management_class_master"
+                  sequence="1"
+        />
     </data>
 </odoo>
